--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,4 +39,18 @@
     <script type="text/javascript" src="/assets/js/bower_components/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/assets/js/bower_components/bootstrap/bootstrap.min.js"></script>
 
+    <!-- Google Analytics -->
+    <div style="display:none">
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-72165600-1', 'auto');
+            ga('send', 'pageview');
+
+        </script>
+    </div>
+
 </footer>
