--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
     <!-- Third-Party CSS -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/bower_components/octicons/octicons/octicons.css">
+    <link rel="stylesheet" href="/bower_components/hover/css/hover-min.css">
 
     <!-- My CSS -->
     <link rel="stylesheet" href="/assets/css/common.css">
