--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,9 @@
     <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <!-- My JS -->
+    <script type="text/javascript" src="/assets/js/script.js"></script>
+
     {% for javascript in page.javascript %}
     <script src="/assets/js/{{javascript}}"></script>
     {% endfor %}
