--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -55,6 +55,47 @@
     font-size: 20px;
 }
 
+/******* Scroll Start *******/
+.site-header.site-header-nav-scrolled {
+    margin: 0;
+    background-color: white;
+
+    -webkit-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
+    -moz-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
+    -ms-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
+    -o-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
+    box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
+}
+
+.site-header.site-header-nav-scrolled a, .site-header.site-header-nav-scrolled#site-header-brand {
+    color: #2e2e2e !important;
+}
+
+.site-header.site-header-nav-scrolled a:hover {
+    color: #4183c4;
+}
+/******* Scroll End *******/
+
+/** Jumbotron **/
+.jumbotron {
+    padding-top: 200px;
+    padding-bottom: 100px;
+    color: #fff;
+    background: #4183c4;
+}
+
+.jumbotron a {
+    color: #fff;
+    text-decoration: none;
+}
+.jumbotron #jumbotron-meta-info {
+    margin-top: 20px;;
+}
+
+.jumbotron .meta-info {
+    margin-right: 15px
+}
+
 /** Footer **/
 .site-footer{
     position:relative;
