--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,6 +19,7 @@
     <!-- Third-Party JS -->
     <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/bower_components/geopattern/js/geopattern.min.js"></script>
 
     <!-- My JS -->
     <script type="text/javascript" src="/assets/js/script.js"></script>
