--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,8 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
+    <script type="text/javascript" src="/bower_components/jquery/dist/jquery.min.js"></script>
+
     <!-- Third-Party CSS -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/bower_components/octicons/octicons/octicons.css">
