--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,15 @@
 ---
 layout: default
 ---
+{% include jumbotron.html %}
 <article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+    <header class="post-header">
+        <h1 class="post-title">{{ page.title }}</h1>
+    </header>
 
-  <div class="post-content">
-    {{ content }}
-  </div>
+    <div class="post-content">
+        {{ content }}
+    </div>
 
 </article>
