Add OpenSource Page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,4 +30,6 @@
     <link rel="stylesheet" href="/assets/css/{{css}}">
     {% endfor %}
 
+    <script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
 </head>
