--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,4 +1,4 @@
-<section class="jumbotron" geo-pattern="{{ page.title }}">
+<section class="jumbotron geopattern" data-pattern-id="{{ page.title }}">
     <div class="container">
         <div id="jumbotron-meta-info">
             <h1>{{ page.title }}</h1>
@@ -13,7 +13,12 @@
         </div>
     </div>
 </section>
-<script type="text/javascript">
-    var geoPattern = $(".jumbotron").attr("geo-pattern");
-    $(".jumbotron").css("background-image", "url(data:image/svg+xml;base64,{% base64_geo_pattern text="+ geoPattern +" %}");
+<script>
+    $(document).ready(function(){
+
+        $('.geopattern').each(function(){
+            $(this).geopattern($(this).data('pattern-id'));
+        });
+
+    });
 </script>
