--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/bower_components/octicons/octicons/octicons.css">
     <link rel="stylesheet" href="/bower_components/hover/css/hover-min.css">
+    <link rel="stylesheet" href="/bower_components/primer-markdown/dist/user-content.min.css">
+    <link rel="stylesheet" href="/assets/css/syntax.css">
 
     <!-- My CSS -->
     <link rel="stylesheet" href="/assets/css/common.css">
