--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@ layout: default
         <h1 class="post-title">{{ page.title }}</h1>
     </header>
 
-    <div class="post-content">
+    <div class="post-content markdown-body">
         {{ content }}
     </div>
 
