--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ css: ['sidebar-post-nav.css']
     <div class="row">
 
         <!-- Post List -->
-        <div class="col-md-8">
+        <div class="col-md-8 markdown-body">
             {{ content }}
         </div>
 
