--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -123,6 +123,7 @@
     padding-top: 30px;
     padding-bottom: 30px;
     list-style: none;
+    border-bottom: 1px solid #eee;
 }
 
 .post-list-title a {
