--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -146,3 +146,7 @@
 .post-list-meta, .post-list-meta.octicon {
     font-size: 18px;
 }
+
+.geopattern {
+    background-size: contain; /* To fix strange behavior when zoom in/out */
+}
