Update open source page. NO API CALL!

--- a/_includes/open-source.html
+++ b/_includes/open-source.html
@@ -1,47 +1,49 @@
+{% assign sorted_repos = (site.github.public_repositories | sort: 'stargazers_count') | reverse | where: "fork", "false" %}
 <div id="container-open-source" class="container">
     <section class="jumbotron" geo-pattern="{{ page.title }}">
         <div class="container">
             <div id="jumbotron-meta-info">
                 <h1>Open Source Projects</h1>
                 <span class="meta-info">
-                    I have <span class="repo-count">0</span> projects on Github
+                    I have <span class="repo-count">{{ sorted_repos.size }}</span> projects on Github
                 </span>
             </div>
         </div>
     </section>
 
     <div class="repo-list row">
-    </div>
-
-    <div id="repo-template" style="display:none">
+        <!-- Check here for github metadata -->
+        <!-- https://help.github.com/articles/repository-metadata-on-github-pages/ -->
+        {% for repo in sorted_repos %}
         <div class="col-md-4 card text-center">
             <div class="thumbnail">
-                <div class="card-image geopattern" data-pattern-id="[repo.name]">
+                <div class="card-image geopattern" data-pattern-id="{{ repo.name }}">
                     <div class="card-image-cell">
                         <h3 class="card-title">
-                            <a href="[repo.html_url]" target="_blank">[repo.name]</a>
+                            <a href="{{ repo.html_url }}" target="_blank">{{ repo.name }}</a>
                         </h3>
                     </div>
                 </div>
                 <div class="caption">
                     <div class="card-description">
-                        <p class="card-text">[repo.description]</p>
+                        <p class="card-text">{{ repo.description }}</p>
                     </div>
                     <div class="card-text">
-                        <span data-toggle="tooltip" title="[repo.stargazers_count] stars">
-                            <span class="octicon octicon-star"></span> [repo.stargazers_count]
+                        <span data-toggle="tooltip" title="{{ repo.stargazers_count }} stars">
+                            <span class="octicon octicon-star"></span> {{ repo.stargazers_count }}
                         </span>
-                        <span data-toggle="tooltip" title="[repo.forks_count] forks">
-                            <span class="octicon octicon-git-branch"></span> [repo.forks_count]
+                        <span data-toggle="tooltip" title="{{ repo.forks_count }} forks">
+                            <span class="octicon octicon-git-branch"></span> {{ repo.forks_count }}
                         </span>
-                        <span data-toggle="tooltip" title="Last updated：[repo.updated_at]">
+                        <span data-toggle="tooltip" title="Last updated：{{ repo.updated_at }}">
                             <span class="octicon octicon-clock"></span>
-                            <time datetime="[repo.updated_at]" title="[repo.updated_at]"> [repo.updated_at]</time>
+                            <time datetime="{{ repo.updated_at }}" title="{{ repo.updated_at }}">{{ repo.updated_at }}</time>
                         </span>
                     </div>
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
 
 </div>
@@ -51,45 +53,9 @@
         // Enable bootstrap tooltip
         $("body").tooltip({ selector: '[data-toggle=tooltip]' });
 
-        $('.repo-list').html("<h1 class='loading-info'>Loading .....</h1>");
-
-        var repoList = $('<div class="collection-listing clearfix"></div>');
-        var repoCount = 0;
-
-        // Github api returns 30 items per request by default, so add per-page
-        $.get('https://api.github.com/users/DONGChuan/repos?type=owner&per_page=1000',
-            function(repos){
-
-                repos = _.sortBy(repos, function(repo){
-                    return - (repo.stargazers_count + repo.forks_count + repo.watchers_count);
-                });
-
-                repos.forEach(function(repo){
-
-                    if (repo.fork) return;
-
-                    repoCount++;
-
-                    var date = new Date(repo.updated_at);
-
-                    repo.updated_at = date.getFullYear() + '-' + (date.getMonth() + 1) + '-' + date.getDay();
-                    repo.language = repo.language || 'unknown';
-
-                    var repoTemplate = $('#repo-template').html();
-                    var item = repoTemplate.replace(/\[(.*?)\]/g, function(){
-                        return eval(arguments[1]);
-                    });
-
-                    repoList.append(item);
-                });
-
-                $('.repo-list').html(repoList);
-
-                $('.repo-count').html(repoCount);
-
-                $('.geopattern').each(function(){
-                    $(this).geopattern($(this).data('pattern-id'));
-                });
+        $('.geopattern').each(function(){
+            $(this).geopattern($(this).data('pattern-id'));
         });
+
     });
 </script>
