--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,14 +2,8 @@
 layout: default
 ---
 {% include jumbotron.html %}
-<article class="post">
+<article class="post container">
 
-    <header class="post-header">
-        <h1 class="post-title">{{ page.title }}</h1>
-    </header>
-
-    <div class="post-content markdown-body">
-        {{ content }}
-    </div>
+    {{ content }}
 
 </article>
