--- a/_includes/open-source-page.html
+++ b/_includes/open-source-page.html
@@ -29,15 +29,15 @@
                         <p class="card-text">{{ repo.description }}</p>
                     </div>
                     <div class="card-text">
-                        <span data-toggle="tooltip" title="{{ repo.stargazers_count }} stars">
+                        <span data-toggle="tooltip" class="meta-info" title="{{ repo.stargazers_count }} stars">
                             <span class="octicon octicon-star"></span> {{ repo.stargazers_count }}
                         </span>
-                        <span data-toggle="tooltip" title="{{ repo.forks_count }} forks">
+                        <span data-toggle="tooltip" class="meta-info" title="{{ repo.forks_count }} forks">
                             <span class="octicon octicon-git-branch"></span> {{ repo.forks_count }}
                         </span>
-                        <span data-toggle="tooltip" title="Last updated：{{ repo.updated_at }}">
+                        <span data-toggle="tooltip" class="meta-info" title="Last updated：{{ repo.updated_at }}">
                             <span class="octicon octicon-clock"></span>
-                            <time datetime="{{ repo.updated_at }}" title="{{ repo.updated_at }}">{{ repo.updated_at }}</time>
+                            <time datetime="{{ repo.updated_at }}" title="{{ repo.updated_at }}">{{ repo.updated_at | date: '%Y-%m-%d' }}</time>
                         </span>
                     </div>
                 </div>
