--- a/assets/css/open-source.css
+++ b/assets/css/open-source.css
@@ -2,6 +2,7 @@
     display: table;
     height: 120px;
     width: 100%;
+    border-radius: 4px;
 }
 
 .card-image .card-image-cell {
@@ -28,4 +29,27 @@
 
 .loading-info {
     text-align: center;
+}
+
+.card .thumbnail {
+    border: 1px solid rgba(0,0,0,0.075);
+    border-bottom-color: rgba(0,0,0,0.125);
+    border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05),0 5px 10px rgba(0,0,0,0.05);
+    -webkit-transition: border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+    transition: border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+}
+
+.card .thumbnail:hover{
+    border-color:rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.15);
+    box-shadow:0 2px 4px rgba(0,0,0,0.05),0 10px 18px rgba(0,0,0,0.1);
+}
+
+.card .thumbnail:hover .card-title a{
+    color:#000;
+    text-decoration:none;
+}
+
+.card-text .meta-info {
+    margin-right: 10px;
 }
