--- a/_includes/sidebar-popular-repo.html
+++ b/_includes/sidebar-popular-repo.html
@@ -1,7 +1,7 @@
-<h3>Popular Repositories</h3>
+<h3 style="text-align: center">My Popular Repositories</h3>
 {% assign sorted_repos = (site.github.public_repositories | sort: 'stargazers_count') | reverse | where: "fork", "false" %}
-{% for repo in sorted_repos %}
-<div class="col-md-4 card text-center">
+{% for repo in sorted_repos | limit: site.side_bar_repo_limit %}
+<div class="card text-center">
     <div class="thumbnail">
         <div class="card-image geopattern" data-pattern-id="{{ repo.name }}">
             <div class="card-image-cell">
@@ -15,16 +15,16 @@
                 <p class="card-text">{{ repo.description }}</p>
             </div>
             <div class="card-text">
-                        <span data-toggle="tooltip" title="{{ repo.stargazers_count }} stars">
-                            <span class="octicon octicon-star"></span> {{ repo.stargazers_count }}
-                        </span>
-                        <span data-toggle="tooltip" title="{{ repo.forks_count }} forks">
-                            <span class="octicon octicon-git-branch"></span> {{ repo.forks_count }}
-                        </span>
-                        <span data-toggle="tooltip" title="Last updated：{{ repo.updated_at }}">
-                            <span class="octicon octicon-clock"></span>
-                            <time datetime="{{ repo.updated_at }}" title="{{ repo.updated_at }}">{{ repo.updated_at }}</time>
-                        </span>
+                <span data-toggle="tooltip" class="meta-info" title="{{ repo.stargazers_count }} stars">
+                    <span class="octicon octicon-star"></span> {{ repo.stargazers_count }}
+                </span>
+                <span data-toggle="tooltip" class="meta-info" title="{{ repo.forks_count }} forks">
+                    <span class="octicon octicon-git-branch"></span> {{ repo.forks_count }}
+                </span>
+                <span data-toggle="tooltip" class="meta-info" title="Last updated：{{ repo.updated_at }}">
+                    <span class="octicon octicon-clock"></span>
+                    <time datetime="{{ repo.updated_at }}" title="{{ repo.updated_at }}">{{ repo.updated_at | date: '%Y-%m-%d' }}</time>
+                </span>
             </div>
         </div>
     </div>
