--- a/assets/css/sidebar-popular-repo.css
+++ b/assets/css/sidebar-popular-repo.css
@@ -30,11 +30,13 @@
     box-shadow: 0 1px 2px rgba(0,0,0,0.05),0 5px 10px rgba(0,0,0,0.05);
     -webkit-transition: border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
     transition: border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+    opacity: 0.8;
 }
 
 .card .thumbnail:hover{
     border-color:rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.15);
     box-shadow:0 2px 4px rgba(0,0,0,0.05),0 10px 18px rgba(0,0,0,0.1);
+    opacity: 1;
 }
 
 .card .thumbnail:hover .card-title a{
