--- a/_includes/open-source-page.html
+++ b/_includes/open-source-page.html
@@ -1,6 +1,6 @@
 {% assign sorted_repos = (site.github.public_repositories | sort: 'stargazers_count') | reverse | where: "fork", "false" %}
-<div id="container-open-source" class="container">
-    <section class="jumbotron" geo-pattern="{{ page.title }}">
+<div id="container-open-source">
+    <section class="jumbotron geopattern" data-pattern-id="{{ page.title }}">
         <div class="container">
             <div id="jumbotron-meta-info">
                 <h1>Open Source Projects</h1>
@@ -11,40 +11,42 @@
         </div>
     </section>
 
-    <div class="repo-list row">
-        <!-- Check here for github metadata -->
-        <!-- https://help.github.com/articles/repository-metadata-on-github-pages/ -->
-        {% for repo in sorted_repos %}
-        <div class="col-md-4 card text-center">
-            <div class="thumbnail">
-                <div class="card-image geopattern" data-pattern-id="{{ repo.name }}">
-                    <div class="card-image-cell">
-                        <h3 class="card-title">
-                            <a href="{{ repo.html_url }}" target="_blank">{{ repo.name }}</a>
-                        </h3>
+    <section class="container">
+        <div class="repo-list row">
+            <!-- Check here for github metadata -->
+            <!-- https://help.github.com/articles/repository-metadata-on-github-pages/ -->
+            {% for repo in sorted_repos %}
+            <div class="col-md-4 card text-center">
+                <div class="thumbnail">
+                    <div class="card-image geopattern" data-pattern-id="{{ repo.name }}">
+                        <div class="card-image-cell">
+                            <h3 class="card-title">
+                                <a href="{{ repo.html_url }}" target="_blank">{{ repo.name }}</a>
+                            </h3>
+                        </div>
                     </div>
-                </div>
-                <div class="caption">
-                    <div class="card-description">
-                        <p class="card-text">{{ repo.description }}</p>
-                    </div>
-                    <div class="card-text">
-                        <span data-toggle="tooltip" class="meta-info" title="{{ repo.stargazers_count }} stars">
-                            <span class="octicon octicon-star"></span> {{ repo.stargazers_count }}
-                        </span>
-                        <span data-toggle="tooltip" class="meta-info" title="{{ repo.forks_count }} forks">
-                            <span class="octicon octicon-git-branch"></span> {{ repo.forks_count }}
-                        </span>
-                        <span data-toggle="tooltip" class="meta-info" title="Last updated：{{ repo.updated_at }}">
-                            <span class="octicon octicon-clock"></span>
-                            <time datetime="{{ repo.updated_at }}" title="{{ repo.updated_at }}">{{ repo.updated_at | date: '%Y-%m-%d' }}</time>
-                        </span>
+                    <div class="caption">
+                        <div class="card-description">
+                            <p class="card-text">{{ repo.description }}</p>
+                        </div>
+                        <div class="card-text">
+                            <span data-toggle="tooltip" class="meta-info" title="{{ repo.stargazers_count }} stars">
+                                <span class="octicon octicon-star"></span> {{ repo.stargazers_count }}
+                            </span>
+                            <span data-toggle="tooltip" class="meta-info" title="{{ repo.forks_count }} forks">
+                                <span class="octicon octicon-git-branch"></span> {{ repo.forks_count }}
+                            </span>
+                            <span data-toggle="tooltip" class="meta-info" title="Last updated：{{ repo.updated_at }}">
+                                <span class="octicon octicon-clock"></span>
+                                <time datetime="{{ repo.updated_at }}" title="{{ repo.updated_at }}">{{ repo.updated_at | date: '%Y-%m-%d' }}</time>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
-    </div>
+    </section>
 
 </div>
 <script>
