--- a/_includes/sidebar-post-nav.html
+++ b/_includes/sidebar-post-nav.html
@@ -1,4 +1,4 @@
-<h3 class="sidebar-title">Post Directory</h3>
+<h3>Post Directory</h3>
 <div id="post-directory-module">
 <section class="post-directory">
     <!-- Links that trigger the jumping -->
