Upper the 1st character

--- a/_includes/sidebar-post-tag.html
+++ b/_includes/sidebar-post-tag.html
@@ -9,3 +9,10 @@
         {% endfor %}
     </ul>
 </div>
+<script type="text/javascript">
+
+    $(document).ready(function(){
+        $("#blog-categories li").css('text-transform','capitalize')
+    });
+
+</script>
