--- a/_includes/blog-page.html
+++ b/_includes/blog-page.html
@@ -18,6 +18,9 @@
         <!-- Pagination -->
         {% include pagination.html %}
 
+        <!-- Comments -->
+        {% include disqus-comments.html %}
+
     </div>
 
     <div class="col-md-4">
