--- a/_includes/open-source-page.html
+++ b/_includes/open-source-page.html
@@ -5,7 +5,7 @@
             <div id="jumbotron-meta-info">
                 <h1>Open Source Projects</h1>
                 <span class="meta-info">
-                    I have <span class="repo-count">{{ sorted_repos.size }}</span> projects on Github
+                    I have <span class="repo-count badge">{{ sorted_repos.size }}</span> projects on Github
                 </span>
             </div>
         </div>
