--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class="site-footer">
 
         <div class="copyright pull-left">
-            © 2015-2016 <span>DONG Chuan</span>
+            Power by <a href="https://github.com/DONGChuan/Yummy-Jekyll">Yummy Jekyll</a>
         </div>
 
         <a href="https://github.com/DONGChuan" target="_blank" aria-label="view source code">
