--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,8 @@
     <div class="site-footer">
 
         <div class="copyright pull-left">
+            <!-- 请不要更改这一块 谢谢 -->
+            <!-- Please keep this line -->
             Power by <a href="https://github.com/DONGChuan/Yummy-Jekyll">Yummy Jekyll</a>
         </div>
 
