--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,10 @@
         <div class="copyright pull-left">
             <!-- 请不要更改这一行 方便其他人知道模板的来源 谢谢 -->
             <!-- Please keep this line to let others know where this theme comes from. Thank you :D -->
-            Power by <a href="https://github.com/DONGChuan/Yummy-Jekyll">Yummy Jekyll</a>
+            Power by <a href="http://fanaticalweb.com">FanaticalWeb</a>
         </div>
 
-        <a href="https://github.com/DONGChuan" target="_blank" aria-label="view source code">
+        <a href="https://github.com/fanaticalgeek" target="_blank" aria-label="view source code">
             <span class="mega-octicon octicon-mark-github" title="GitHub"></span>
         </a>
 
