--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -77,6 +77,22 @@
 }
 /******* Scroll End *******/
 
+/******* Scroll Start on the phone *******/
+.site-header {
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+}
+
+.site-header.site-header-nav-scrolled-ph {
+    margin-top: -160px;
+
+    -webkit-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
+    -moz-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
+    -ms-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
+    -o-box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
+    box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
+}
+/******* Scroll End *******/
+
 /** Jumbotron **/
 .jumbotron {
     padding-top: 200px;
