--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -105,12 +105,14 @@
     text-decoration: none;
 }
 .jumbotron #jumbotron-meta-info {
-    margin-top: 20px;;
+    margin-top: 20px;
 }
 
 .jumbotron .meta-info {
     font-size: 20px;
-    margin-right: 15px
+    margin-right: 15px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .jumbotron.meta-info, .jumbotron .meta-info .octicon {
