feat: category filter
Add category filter by js. Now you can click category item to filter posts.

--- a/_includes/blog-page.html
+++ b/_includes/blog-page.html
@@ -5,7 +5,7 @@
         <!-- Blog list -->
         <ul id="posts-list">
             {% for post in site.posts %}
-            <li class="posts-list-item">
+            <li class="posts-list-item" data-title="{{post.title}}">
                 <div class="posts-content">
                     <span class="posts-list-meta">{{ post.date | date: "%Y-%m-%d" }}</span>
                     <a class="posts-list-name bubble-float-left" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
